# Verhub

./: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  README.md  TODO  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  verhub.openapi.yaml
.agents/skills/shadcn/: customization.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/prompts/: project-development-governance.prompt.md
.github/workflows/: ci.yml  docker-publish.yml  docs-deploy.yml  release.yml  test.yml
doc/: index.md  package.json
doc/.vitepress/: config.ts
doc/guide/: contributing.md  deployment.md  development.md  faq.md  getting-started.md  introduction.md  operations.md  update-policy.md  user-guide.md
doc/reference/: architecture.md  sdk.md
docker/: app-entrypoint.sh  backend-dev-entrypoint.sh  backend-entrypoint.sh  backend.Dockerfile  frontend-dev-entrypoint.sh  frontend-entrypoint.sh  frontend.Dockerfile  verhub.Dockerfile  web.Dockerfile
docker/nginx/: default.conf
docs/: DEVELOPMENT.md  DOCKER-DEPLOYMENT.md  DOCKER.md
scripts/: dev-seed-geo.sql  generate-api-docs.mjs  version.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/verhub_sdk/: __init__.py  _http.py  _unset.py  _version.py  admin_api.py  async_client.py  client.py  errors.py  models.py  public_api.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: check_update.rs
sdk/rust/src/: admin_api.rs  error.rs  http.rs  lib.rs  models.rs  public_api.rs
sdk/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/typescript/src/: admin-api.ts  client.ts  errors.ts  http.ts  index.ts  models.ts  public-api.ts  version.ts
sdk/vanilla-js/: README.md  build.mjs  package.json  verhub-sdk.global.js  verhub-sdk.js
web/: middleware.ts  next.config.mjs  package.json  proxy.ts  vitest.config.ts
web/app/: layout.tsx  page.tsx
web/app/admin/: layout.tsx  page.test.tsx  page.tsx
web/app/announcements/: page.tsx
web/app/dashboard/: page.tsx
web/app/doc/: layout.tsx  page.tsx
web/components/: route-transition.tsx
web/hooks/: use-admin-projects.tsx  use-pagination.test.ts  use-pagination.ts  use-shared-project-selection.test.tsx  use-shared-project-selection.ts
web/lib/: actions-api.ts  analytics-api.ts  announcements-api.ts  api-client.ts  auth-api.ts  auth-redirect.test.ts  auth-redirect.ts  auth-session.test.ts  auth-session.ts  comparable-version.ts  error-utils.test.ts  error-utils.ts  feedbacks-api.ts  logs-api.ts  platform.ts  projects-api.ts  public-api-server.ts  public-api.ts  scroll.ts  seo.ts  stats-api.ts  versions-api.ts
(+104 files in other folders)
